--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
     "gatsby": "2.20.2",
+    "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "2.3.1",
     "gatsby-plugin-offline": "3.1.0",
     "gatsby-plugin-postcss": "2.2.0",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.2.0",
-    "gatsby-plugin-sharp": "2.5.1",
+    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -31,7 +34,7 @@
     "fix:prettier": "prettier --write \"**/*.{css,js,jsx,json,md}\"",
     "fix": "npm run fix:lint && npm run fix:prettier",
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "npx gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
