--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "4.0.0",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "2.20.2",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "2.3.1",
@@ -12,12 +13,14 @@
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.2.0",
     "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "styled-components": "^5.0.1"
   },
   "keywords": [
     "gatsby",
